--- a/_includes/selected_papers.html
+++ b/_includes/selected_papers.html
@@ -1,5 +1,5 @@
 
           <div class="publications">
             {% bibliography -f {{ site.scholar.bibliography }} -q @*[selected=true]* %}
-            {% bibliography -f {{ site.scholar.mgt }} -q @*[selected=true]* %}
+            {% bibliography -f {{ site.scholar.journal }} -q @*[selected=true]* %}
           </div>
